--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Mubashar Nouman - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
+ 
 <body>
     <header class="hero">
-        <h1>Mubashar Nouman</h1>
+        <h1>Mubashar</h1>
         <p>Frontend Developer | Nuxt3 | NextJs | React | Vue</p>
     </header>
     <nav>
