--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
    
 
 
-    <script key=YA+WOd9gnz2P5Te27XDEYpybMimOvbQNe9QkVOZj0ZzjV/YJur70X8dBaGzqJARHlEVdtIgVjwkre3wZo0htrl/s/GUK0ucqrZyESJiKbxA= ></script>
+    <script src="./main.js" key=YA+WOd9gnz2P5Te27XDEYpybMimOvbQNe9QkVOZj0ZzjV/YJur70X8dBaGzqJARHlEVdtIgVjwkre3wZo0htrl/s/GUK0ucqrZyESJiKbxA= ></script>
 </body>
 </html>
